[package]
name = "search-cli"
authors = ["masinc <masinc000@gmail.com>"]
description = "Cli program to search for arguments words in the browser."
categories = ["command-line-utilities"]
keywords = ["cli"]
license = "MIT OR Apache-2.0"
version = "0.2.3"
readme = "README.md"
edition = "2021"
repository = "https://github.com/masinc/search-cli"

[[bin]]
name = "search"
path = "src/main.rs"

[dependencies]
serde_yaml = "0.9"
dirs = "5"
anyhow = "1"
tera = "1"
open = "5"
clap_complete = "4"
schemars = "0.8"
serde_json = "1"

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dev-dependencies]
regex = "1"
